complete_ForgetPassword and REset link

--- a/src/app/organizationadmin/ui-elements/ui-elements.component.html
+++ b/src/app/organizationadmin/ui-elements/ui-elements.component.html
@@ -532,7 +532,7 @@
   <div class="modal-overlay" *ngIf="ispopupvisible_insp_cv"></div>
 
   <div class="data-entry-container" *ngIf="ispopupvisible_insp_cv">
-    <h2>INSPECTOR_CV</h2>
+    <h2>UPLOAD INSPECTOR_CV</h2>
     <table>
       <tr>
         <td>
@@ -861,22 +861,12 @@
     This is the content of Inspector_cv.
   </div>
   <div class="card-actions">
+    <button class="card-button" (click)="ViewCv()">View</button>
     <button class="card-button" (click)="togglePopupVisibility()">Open</button>
   </div>
 </div>
 
 
-  <!-- <div class="card">f
-    <div class="card-header">
-      <h3 class="card-title">Travel Accomodation</h3>
-      <img src="assets/userrole1@2x.png" alt="User Role Logo" class="card-logo">
-    </div>
-    <div class="card-content">
-      This is the content of User_role.
-    </div>
-    <div class="card-actions">
-      <button class="card-button" (click)="openPopupForm3()">Update</button>
-    </div>
-  </div> -->
+  
 
 </div>
