--- a/src/app/forgotpassword/forgotpassword.component.scss
+++ b/src/app/forgotpassword/forgotpassword.component.scss
@@ -20,62 +20,64 @@
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
   text-align: center;
 }
-
 .header-logo {
-  max-width: 190px;
-  margin: 75px;
-  display: flex;
+  width: 80px; /* Adjust the width to your desired size */
+  max-height: 80px;
+  margin-bottom: 20px;
 }
 
 h2 {
-  font-size: 1.9rem;
-  margin-bottom: 3rem;
-  color: #1f3853;
+  font-size: 1.8em;
+  margin-bottom: 15px;
+  color: #333;
 }
 
 .form-group {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-bottom: 1rem;
+  margin-bottom: 15px;
 }
 
 label {
-  text-align: left;
-  width: 50%;
-  font-size: 1.2rem;
-  margin-bottom: 0.5rem;
-  font-size: medium;
+  display: block;
+  margin-bottom: 6px;
+  color: #555;
 }
 
 input {
-  width: 50%;
-  font-size: 1rem;
-  padding: 0.5rem;
+  width: 100%;
+  padding: 10px;
   border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 14px;
 }
 
 .error-message {
-  color: red;
-  font-size: 0.8rem;
-  margin-bottom: 1rem;
+  color: #ff0000;
+  margin-top: 4px;
 }
 
 .submit-button {
-  background-color: #2c46ed;
+  background-color: #4caf50;
   color: #fff;
-  border: 1px solid #007bff;
-  border-radius: 1.00rem;
-  padding: 0.3rem 1rem;
+  padding: 12px 15px;
+  border: none;
+  border-radius: 4px;
   cursor: pointer;
+  font-size: 14px;
+  transition: background-color 0.3s;
 }
 
 .submit-button:hover {
-  background-color: #0069d9;
+  background-color: #45a049;
 }
 
 .back-to-login-link {
-  text-decoration: underline;
+  color: #007bff;
+  text-decoration: none;
   cursor: pointer;
-  color: rgb(219, 178, 14);
+  font-size: 14px;
+}
+
+.back-to-login-link:hover {
+  text-decoration: underline;
+  color: #0056b3;
 }
