--- a/src/app/organizationadmin/ui-elements/ui-elements.component.scss
+++ b/src/app/organizationadmin/ui-elements/ui-elements.component.scss
@@ -197,21 +197,21 @@ button:hover, .btn-danger:hover {
   }
 }
 /* Styles for the data entry container */
-// .data-entry-container {
-//   position: absolute;
-//   top: 50%;
-//   left: 50%;
-//   transform: translate(-50%, -50%);
-//   width: 380px;
-//   margin: 0 auto;
-//   max-width: 400%;
-//   background-color: #ffffff;
-//   border: 1px solid #ffffff;
-//   border-radius: 10px;
-//   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-//   text-align: center;
-//   padding: 20px;
-// }
+.data-entry-container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 380px;
+  margin: 0 auto;
+  max-width: 400%;
+  background-color: #ffffff;
+  border: 1px solid #ffffff;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  text-align: center;
+  padding: 20px;
+}
 .data-entry-container h2 {
   font-size: 1.5rem;
   margin-bottom: 20px;
