--- a/src/app/INF/inspection-inf/inspection-inf.component.css
+++ b/src/app/INF/inspection-inf/inspection-inf.component.css
@@ -1,11 +1,10 @@
-.name-card {
+f.name-card {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 16px;
     border-bottom: 1px solid black;
   }
-  
   mat-card {
     max-width: 400px;
     margin: 0 auto;
