admin home page by sabari

--- a/src/app/organizationadmin/organization_admin_Home/dashboard.component.html
+++ b/src/app/organizationadmin/organization_admin_Home/dashboard.component.html
@@ -13,8 +13,8 @@
       <div class="col-md-6 col-lg-4 mb-4">
         <div class="card">
           <div class="card-body card-body-1">
-            <h5 class="card-title">Card Title 1</h5>
-            <p class="card-text">Some content goes here for card 1.</p>
+            <h5 class="card-title">30</h5>
+            <p class="card-text">Total Employees</p>
           </div>
         </div>
       </div>
@@ -26,8 +26,8 @@
       <div class="col-md-6 col-lg-4 mb-4">
         <div class="card">
           <div class="card-body card-body-2">
-            <h5 class="card-title">Card Title 2</h5>
-            <p class="card-text">Some content goes here for card 2.</p>
+            <h5 class="card-title">12</h5>
+            <p class="card-text">Total Inspectors</p>
           </div>
         </div>
       </div>
@@ -39,8 +39,8 @@
       <div class="col-md-6 col-lg-4 mb-4">
         <div class="card">
           <div class="card-body card-body-3">
-            <h5 class="card-title">Card Title 2</h5>
-            <p class="card-text">Some content goes here for card 2.</p>
+            <h5 class="card-title">12</h5>
+            <p class="card-text">Some content</p>
           </div>
         </div>
       </div>
@@ -52,8 +52,8 @@
       <div class="col-md-6 col-lg-4 mb-4">
         <div class="card">
           <div class="card-body card-body-4">
-            <h5 class="card-title">Card Title 2</h5>
-            <p class="card-text">Some content goes here for card 2.</p>
+            <h5 class="card-title">12</h5>
+            <p class="card-text">Some content</p>
           </div>
         </div>
       </div>
