pit checklist completed by sabari

--- a/src/app/inspector_dashboard/inspector-home/inspector-home.component.html
+++ b/src/app/inspector_dashboard/inspector-home/inspector-home.component.html
@@ -118,7 +118,7 @@
 
               <i class="fas fa-comments green-text"  *ngIf="request.client_approval_status !== 0 "  ></i>
             <span *ngIf="request.client_approval_status === 1" class="green-text">
-              Accepted the mail
+              Mail Accepted  
             </span>
         </div>
         
