--- a/src/app/inspector_dashboard/pit/pitcheckpoints/pitcheckpoints.component.html
+++ b/src/app/inspector_dashboard/pit/pitcheckpoints/pitcheckpoints.component.html
@@ -13,7 +13,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr *ngFor="let item of dropdownArray; let index = index">
+                    <tr *ngFor="let item of dropdownArray; let index = index" >
                         <td>
                             <ng-container *ngIf="item.includes('---')">
                                 {{ item.split('---')[0] }}
@@ -26,35 +26,44 @@
                         </td>
                         <td>
                             <div class="input-group">
-                                <input *ngIf="photoArray[index] && (photoArray[index].toLowerCase() === 'y')" type="file"  accept="image/*"  class="form-control-file"  id="'photoUpload_img'+index"  (change)="handleFileInput($event, index)" [class.selected-file]="photoSelected[index]">
-
+                                <input [disabled]="disable" *ngIf="photoArray[index] && (photoArray[index].toLowerCase() === 'y')" type="file" accept="image/*" class="form-control-file" id="'photoUpload_img'+index" (change)="handleFileInput($event, index)" [class.selected-file]="photoSelected[index]">
                                 <p *ngIf="photoArray[index] && (photoArray[index].toLowerCase() === 'y')">OR</p>
-                               
-                                <label *ngIf="photoArray[index] && (photoArray[index].toLowerCase() === 'y')" class="input-group-text" [attr.id]="'photoUpload' + index" (click)="takePicture(index)">
-                                    <i class="fas fa-camera"></i>
-                                </label>
-                            
+                                
+                                
+                        
+
+                                <span [class.disabled]="disable">
+                                    <label *ngIf="photoArray[index] && (photoArray[index].toLowerCase() === 'y')" class="input-group-text" [attr.id]="'photoUpload' + index" (click)="takePicture(index)">
+                                        <i class="fas fa-camera"></i>
+                                    </label>
+                                </span>
+
+
+
                                 <span class="spacer"></span> 
-                                <button (click)="viewImage(index)" class="view-image-button" *ngIf="photoArray[index] && (photoArray[index].toLowerCase() === 'y')">
+                                <button [disabled]="disable" (click)="viewImage(index)" class="view-image-button" *ngIf="photoArray[index] && (photoArray[index].toLowerCase() === 'y')">
                                     <i class="fas fa-eye"></i>
                                 </button>
                             </div>
                         </td>
                         <td>
-                            <input type="checkbox" [checked]="checkpoint[index]" (change)="checkpoint[index] = !checkpoint[index]">
+                            <input [disabled]="disable" type="checkbox" [checked]="checkpoint[index]" (change)="checkpoint[index] = !checkpoint[index]">
                         </td>
                         <td>
-                            <input  *ngIf="photoArray[index] && (photoArray[index].toLowerCase() === 'y')" type="checkbox" [checked]="NeedforReport[index]" (change)="NeedforReport[index] = !NeedforReport[index]">
-                        </td>
-                        
-                        
-                        
+                            <input [disabled]="disable|| !photoArray[index] || (photoArray[index].toLowerCase() !== 'y')" type="checkbox" [checked]="NeedforReport[index]" (change)="NeedforReport[index] = !NeedforReport[index]">
+                        </td>                       
                     </tr>
+
+                    <td colspan="4" clasxs="text-center">
+                        <button (click)="save()" *ngIf="satisfied_button_flag" id="positive" class="Positive-btn">All Are Done</button>
+                        <span class="spacer"></span> 
+                        <button (click)="save_button_enable_fun()" id="negative" *ngIf="defect_button_flag" class="negative-btn">Issue</button>
+                    </td>
                     
                     <tr>
                         <!-- Save button -->
                         <td colspan="4" clasxs="text-center">
-                            <button (click)="save()" class="btn-save">Save</button>
+                            <button (click)="save()" *ngIf="save_button_enable_flag"  class="btn-save">Save</button>
                         </td>
                     </tr>
                 </tbody>
