brief spec done by prabu

--- a/src/app/inspector_dashboard/section/section.component.html
+++ b/src/app/inspector_dashboard/section/section.component.html
@@ -28,6 +28,10 @@
                 <button (click)="proceed1('pit')"><p>Pit</p></button>
                
               </li>
+              <li>
+                <button (click)="proceed2('cabin')"><p>Cabin</p></button>
+               
+              </li>
           
         </ul>
     </div>
