--- a/src/app/inspector_dashboard/breif-spec/breif-spec.component.scss
+++ b/src/app/inspector_dashboard/breif-spec/breif-spec.component.scss
@@ -2,11 +2,54 @@ body {
     font-family: Arial, sans-serif;
     margin: 0 auto;
     padding: 20px;
-    // background-color:whitesmoke;
+    /* background-color:whitesmoke; */
+}
+.container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    width: 50px;
+    position: fixed;
+    bottom: 350px;
+    right:40px;
+    z-index: 1;
+}
+
+.box {
+    width: 100%;
+    height: 40px;
+    background-color: #f0f0f0;
+    border: 1px solid #ccc;
+    margin-bottom: 2px;
+    cursor: pointer;
+    display: flex;
+    align-items: center; 
+    justify-content: center; 
+}
+
+.app{
+  color: black;
+  margin-bottom: 5px;
+}
+.button-container {
+  display: flex;
+  justify-content: center; 
+  align-items: center; 
+  height: 10vh; 
+}
+
+button {
+  background-color: #4CAF50;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
 }
 
 table {
-    width: 70%;
+    width: 80%;
     border-collapse: collapse;
     margin-bottom: 20px;
     background-color: #f0f0f0;
@@ -18,24 +61,8 @@ th, td {
     padding: 10px;
     border: 1px solid black;
     text-align: left;
+   
 }
-td input[type="text"] {
-    border: none; /* Hide the border of input boxes */
-    outline: none; /* Hide the outline when focused */
-    width: 100%; /* Ensure the input boxes expand to fill the table cell */
-    box-sizing: border-box; /* Include padding and border in the width calculation */
-    background-color: #f0f0f0;
-
-  }
-
-  td select {
-    border: none; /* Hide the border of input boxes */
-    outline: none; /* Hide the outline when focused */
-    width: 130%; /* Ensure the input boxes expand to fill the table cell */
-    box-sizing: border-box; /* Include padding and border in the width calculation */
-    background-color: #f0f0f0;
-
-  }
 
 th {
     background-color: #f0f0f0;
@@ -60,20 +87,80 @@ thead th, tbody th, tbody td {
     padding-bottom: 12px;
 }
 
-td{
-  padding: 120px;
-  min-width: 120px;
-  max-width: 120px;
+ input[type="checkbox"] {
+    transform: scale(1.5); 
+    margin: auto; 
+    display: block;
 }
 
-td[contenteditable="true"] {
-       background-color: #f0f0f0;
-    }
-    
-td[contenteditable]:focus{
-        outline:none;
-        
-    }
+ td{
+  padding:200px;
+  min-width:200px;
+  max-width:200px;
+}
+
+td.dropdown-container select option {
+    color: black;
+    background-color:whitesmoke;
+    text-align: center;
+}
+
+td.dropdown-container {
+    position: relative;
+}
+
+td.dropdown-container select {
+    width: 95%;
+    padding: 5px;
+    font-size: 16px;
+    margin: auto;
+    background-color: transparent;
+    border: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    padding-right: 0px;
+    position: absolute;
+    left:2.5%;
+    top:8px;
+    text-align: center;
+}
+
+td.dropdown-container input {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    top: 50%;
+    transform: translateY(-50%);
+    border: none;
+    outline: none;
+    background-color:transparent;
+    font-size: 17px;
+}
+
+
+input[type="text"] {
+    width: 180%; /* Adjust width as needed */
+    padding: 5px;
+    font-size: 16px;
+    border: none;
+    border-radius: 5px;
+    background-color: #f0f0f0;
+    box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
+    transition: background-color 0.3s, box-shadow 0.3s;
+    box-sizing: border-box;
+    display: block;
+    margin: auto;
+    text-align: center;
+    margin-left: -40%; 
+}
+
+
+input[type="text"]:focus {
+    background-color: #ffffff; 
+    box-shadow: 0 0 5px rgba(81, 203, 238, 1); 
+    outline: none;
+}
 
 @media screen and (max-width: 768px) {
     table {
